# cookiecutter-pypackage

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.package_slug}}/: LICENSE  README.md  pyproject.toml  tox.ini
